# Magian

./: CMakeLists.txt  Magian.code-workspace  Magian.cpp  core_game_logic.cpp  core_game_logic_test.cpp  core_game_logic_testing.cpp  game_settings.h  get_datetime.h  get_datetime_function_header.h  get_items.h  get_objective.h  get_settings.h  get_skills.h  known_bugs.txt  level_select.h  linux.toolchain-DRAFT.cmake  logic_test.cpp  magian.com.html  magian.desktop.in  magian.manifest.in  magian_save.txt  magian_save_game.h  menu_settings.h  random.cpp  readme.txt  roadmap.txt  save_game.h  settings.h  staging.cpp  tasks.txt  test.cpp  todo.txt  troubleshooting.txt  update_log.txt
Documentation/: roadmap.txt  update_log.txt
headers/: game_settings.h  get_datetime.h  get_items.h  get_objective.h  get_skills.h  level_select.h  save_game.h
images/Icons/: compiling_icons.txt  resource.rc  resource.res
images/icons/: fire.icns
